[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Goal.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Tile.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Start.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Pigeon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/BaseLevelScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Start.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]
1/name = "Goal.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tile.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Start.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="BaseLevelScene" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0 )

[node name="StartPosition" parent="." instance=ExtResource( 7 )]
position = Vector2( 16, 80 )

[node name="Goal" parent="." instance=ExtResource( 6 )]
position = Vector2( 144, 80 )

[node name="Pigeon" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 80 )
rotation = 1.5708

[node name="StartButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 168.0
margin_right = 88.0
margin_bottom = 188.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 104.0
margin_top = 168.0
margin_right = 152.0
margin_bottom = 188.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="Pigeon" to="." method="_on_Pigeon_finished"]
[connection signal="lost" from="Pigeon" to="." method="_on_Pigeon_lost"]
[connection signal="pressed" from="StartButton" to="." method="start"]
[connection signal="pressed" from="ResetButton" to="." method="_on_Reset_pressed"]
